--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.9.1",
     "vue": "^3.4.10",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/content": "^2.10.0"
   }
 }
