--- a/package.json
+++ b/package.json
@@ -7,14 +7,27 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "prepare": "husky install",
+    "postinstall": "nuxt prepare",
+    "commit": "git-cz"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/cz-commitlint": "^18.4.4",
+    "husky": "^8.0.3",
     "nuxt": "^3.9.1",
     "vue": "^3.4.10",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@nuxt/content": "^2.10.0"
+  },
+  "overrides": {
+    "nuxt": {
+      "dependencies": {
+        "typescript": "^5.2.2"
+      }
+    }
   }
 }
