--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "nuxt-app",
+  "name": "blog",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "changeset": "changeset",
     "prepare": "husky install",
     "postinstall": "nuxt prepare",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "ci:publish": "pnpm build && changeset publish",
+    "ci:version": "changeset version"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
@@ -21,6 +25,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@changesets/cli": "2.27.1",
     "@nuxt/content": "^2.10.0"
   },
   "overrides": {
@@ -29,5 +34,6 @@
         "typescript": "^5.2.2"
       }
     }
-  }
+  },
+  "license": "MIT"
 }
