--- a/package.json
+++ b/package.json
@@ -19,11 +19,36 @@
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@commitlint/cz-commitlint": "^18.4.4",
+    "@eslint/eslintrc": "3.0.0",
+    "@nuxt/eslint-config": "0.2.0",
+    "@types/eslint__eslintrc": "2.1.1",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-define-config": "2.1.0",
+    "eslint-plugin-array-func": "4.0.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-no-secrets": "0.8.9",
+    "eslint-plugin-only-warn": "1.1.0",
+    "eslint-plugin-perfectionist": "2.5.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-regexp": "2.2.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-testing-library": "6.2.0",
+    "eslint-plugin-typescript-sort-keys": "3.1.0",
+    "eslint-plugin-unicorn": "50.0.1",
+    "eslint-plugin-vue": "9.20.1",
+    "eslint-plugin-write-good-comments": "0.2.0",
+    "eslint": "8.56.0",
     "husky": "^8.0.3",
     "nuxt": "^3.9.1",
+    "prettier": "3.2.2",
     "vue": "^3.4.10",
+    "vue-eslint-parser": "9.4.0",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
