--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ci:version": "changeset version"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "0.5.0",
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
     "@commitlint/cz-commitlint": "^18.4.4",
@@ -49,14 +50,17 @@
     "husky": "^8.0.3",
     "nuxt": "^3.9.1",
     "prettier": "3.2.2",
-    "typescript": "5.3.3",
+    "sass": "1.69.7",
+    "typescript": "5.2.2",
     "vue": "^3.4.10",
     "vue-eslint-parser": "9.4.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "1.8.27"
   },
   "dependencies": {
     "@changesets/cli": "2.27.1",
-    "@nuxt/content": "^2.10.0"
+    "@nuxt/content": "^2.10.0",
+    "sitemap": "7.1.1"
   },
   "overrides": {
     "nuxt": {
