--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "include": ["components/**/*", "pages/**/*", "nuxt.config.ts"]
+  "extends": "./.nuxt/tsconfig.json"
 }
