chore: testing publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Pipeline
 
 on:
   push:
@@ -53,7 +53,7 @@ jobs:
         run: pnpm generate
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist/
   deploy:
