--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./output/plubic
+          path: ./.output/plubic
   deploy:
     # Add a dependency to the build job
     needs: build
