--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "nuxt": "^3.9.1",
     "prettier": "3.2.2",
     "sass": "1.69.7",
-    "typescript": "5.2.2",
+    "typescript": "5.3.3",
     "vue": "3.4.10",
     "vue-eslint-parser": "9.4.0",
     "vue-router": "4.2.5",
@@ -60,6 +60,7 @@
   "dependencies": {
     "@changesets/cli": "2.27.1",
     "@nuxt/content": "2.10.0",
+    "@nuxtjs/sitemap": "5.0.4",
     "sitemap": "7.1.1"
   },
   "license": "MIT",
