--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@eslint/eslintrc": "3.0.0",
     "@eslint/js": "8.56.0",
     "@nuxt/eslint-config": "0.2.0",
+    "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/i18n": "8.0.0",
     "@types/eslint__eslintrc": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.18.1",
