--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "postinstall": "nuxt prepare",
     "commit": "cz",
     "ci:publish": "pnpm build && changeset publish",
-    "ci:version": "changeset version"
+    "ci:version": "changeset version",
+    "tokens": "style-dictionary build --config ./theme.config.json"
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.5.0",
+    "@changesets/cli": "2.27.1",
     "@commitlint/cli": "18.4.4",
     "@commitlint/config-conventional": "18.4.4",
     "@commitlint/cz-commitlint": "18.4.4",
@@ -54,6 +56,7 @@
     "nuxt-gtag": "1.1.2",
     "prettier": "3.2.2",
     "sass": "1.69.7",
+    "style-dictionary": "3.9.1",
     "typescript": "5.3.3",
     "vue": "3.4.10",
     "vue-eslint-parser": "9.4.0",
@@ -61,10 +64,7 @@
     "vue-tsc": "1.8.27"
   },
   "dependencies": {
-    "@changesets/cli": "2.27.1",
-    "@nuxt/content": "2.10.0",
-    "@nuxtjs/sitemap": "5.0.4",
-    "sitemap": "7.1.1"
+    "@nuxtjs/sitemap": "5.0.4"
   },
   "license": "MIT",
   "config": {
