chore: update prettier config to sort tailwind properties

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
   "vueIndentScriptAndStyle": true,
   "endOfLine": "auto",
-  "singleQuote": false
+  "singleQuote": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
