--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nuxt-gtag": "1.1.2",
     "postcss": "8.4.33",
     "prettier": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "sass": "1.69.7",
     "style-dictionary": "3.9.1",
     "tailwindcss": "3.4.1",
