--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,13 @@
 
 version: 2
 updates:
-  - directory: '/'
-    package-ecosystem: 'npm'
+  - directory: "/"
+    package-ecosystem: "npm"
     schedule:
-      interval: 'weekly'
-      time: '06:00'
+      interval: "weekly"
+      time: "06:00"
     open-pull-requests-limit: 5
     versioning-strategy: increase
     groups:
       all-minor-updates:
-        update-types: ['minor', 'patch']
+        update-types: ["minor", "patch"]
