--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,13 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - directory: "/"
+    package-ecosystem: "npm"
     schedule:
       interval: "weekly"
+      time: "06:00"
+    open-pull-requests-limit: 5
+    versioning-strategy: increase
+    groups:
+      all-minor-updates:
+        update-types: ["minor", "patch"]
