feat: add social navigation with api integration

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "Vue.vscode-typescript-vue-plugin",
     "Vue.volar"
-  ]
+  ],
+  "unwantedRecommendations": ["vscode.typescript-language-features"]
 }
