style: prettier fix

--- a/.github/actions/install-deps/action.yml
+++ b/.github/actions/install-deps/action.yml
@@ -2,13 +2,13 @@ name: Reusable install deps
 description: This workflow installs dependencies using PNPM and caches the store directory. It is meant to be used as a reusable workflow.
 inputs:
   NODE_VERSION:
-    description: 'The version of Node.js to use'
+    description: "The version of Node.js to use"
     required: true
-    default: '18.x'
+    default: "18.x"
   PNPM_VERSION:
-    description: 'The version of PNPM to use'
+    description: "The version of PNPM to use"
     required: true
-    default: '8.x'
+    default: "8.x"
 runs:
   using: composite
   steps:
