--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -2,7 +2,7 @@ name: Code Style
 
 on:
   pull_request:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   code-style:
@@ -51,8 +51,8 @@ jobs:
       - name: Annotate Code Linting Results
         uses: ataylorme/eslint-annotate-action@v2
         with:
-          repo-token: '${{ secrets.GITHUB_TOKEN }}'
-          report-json: 'eslint_report.json'
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          report-json: "eslint_report.json"
       - name: Upload ESLint report
         uses: actions/upload-artifact@v1
         with:
