chore: change tailwind for unocss

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/eslint__eslintrc": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
+    "@unocss/nuxt": "0.58.4",
     "autoprefixer": "10.4.17",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
@@ -54,13 +55,10 @@
     "husky": "^8.0.3",
     "nuxt": "^3.9.1",
     "nuxt-gtag": "1.1.2",
-    "postcss": "8.4.33",
     "prettier": "3.2.2",
-    "prettier-plugin-tailwindcss": "0.5.11",
-    "sass": "1.69.7",
     "style-dictionary": "3.9.1",
-    "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
+    "unocss": "0.58.4",
     "vue": "3.4.10",
     "vue-eslint-parser": "9.4.0",
     "vue-router": "4.2.5",
