--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,5 @@
 {
   "vueIndentScriptAndStyle": true,
   "endOfLine": "auto",
-  "singleQuote": false,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "singleQuote": false
 }
