--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@commitlint/cz-commitlint": "18.4.4",
     "@eslint/eslintrc": "3.0.0",
     "@eslint/js": "8.56.0",
+    "@iconify-json/material-symbols": "1.1.72",
+    "@iconify-json/mdi": "1.1.64",
     "@nuxt/eslint-config": "0.2.0",
-    "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/i18n": "8.0.0",
+    "@types/chroma-js": "2.4.3",
     "@types/eslint__eslintrc": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
     "@unocss/nuxt": "0.58.4",
+    "@unocss/preset-icons": "0.58.5",
     "@unocss/transformer-directives": "0.58.4",
     "autoprefixer": "10.4.17",
     "commitizen": "4.3.0",
@@ -66,8 +69,10 @@
     "vue-tsc": "1.8.27"
   },
   "dependencies": {
+    "@faker-js/faker": "8.4.0",
     "@nuxtjs/sitemap": "5.0.4",
-    "@unocss/reset": "0.58.4"
+    "@unocss/reset": "0.58.4",
+    "chroma-js": "2.4.2"
   },
   "license": "MIT",
   "config": {
