--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "ci:version": "changeset version"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "0.5.0",
-    "@changesets/cli": "2.27.1",
     "@commitlint/cli": "18.4.4",
     "@commitlint/config-conventional": "18.4.4",
     "@commitlint/cz-commitlint": "18.4.4",
@@ -27,6 +25,7 @@
     "@iconify-json/mdi": "1.1.64",
     "@nuxt/eslint-config": "0.2.0",
     "@nuxtjs/i18n": "8.0.0",
+    "@nuxtjs/mdc": "0.5.0",
     "@types/chroma-js": "2.4.3",
     "@types/eslint__eslintrc": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.18.1",
@@ -56,9 +55,11 @@
     "eslint-plugin-unicorn": "50.0.1",
     "eslint-plugin-vue": "9.20.1",
     "eslint-plugin-write-good-comments": "0.2.0",
+    "h3": "1.10.1",
     "husky": "^8.0.3",
     "nuxt": "^3.10.0",
     "nuxt-gtag": "1.1.2",
+    "ohmyfetch": "0.4.21",
     "prettier": "3.2.2",
     "style-dictionary": "3.9.1",
     "typescript": "5.3.3",
@@ -70,6 +71,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "8.4.0",
+    "@nuxt/content": "2.12.0",
     "@nuxtjs/sitemap": "5.0.4",
     "@unocss/reset": "0.58.4",
     "chroma-js": "2.4.2"
