--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install",
     "postinstall": "nuxt prepare",
     "commit": "cz",
+    "typecheck": "nuxi typecheck",
     "ci:publish": "pnpm build && changeset publish",
     "ci:version": "changeset version"
   },
@@ -26,24 +27,25 @@
     "@nuxt/eslint-config": "0.2.0",
     "@nuxtjs/i18n": "8.0.0",
     "@nuxtjs/mdc": "0.5.0",
+    "@nuxtjs/sitemap": "5.0.4",
     "@types/chroma-js": "2.4.3",
     "@types/eslint__eslintrc": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
     "@unocss/nuxt": "0.58.4",
     "@unocss/preset-icons": "0.58.5",
+    "@unocss/reset": "0.58.4",
     "@unocss/transformer-directives": "0.58.4",
     "autoprefixer": "10.4.17",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-define-config": "2.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-array-func": "4.0.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-no-secrets": "0.8.9",
     "eslint-plugin-only-warn": "1.1.0",
     "eslint-plugin-perfectionist": "2.5.0",
@@ -55,26 +57,19 @@
     "eslint-plugin-unicorn": "50.0.1",
     "eslint-plugin-vue": "9.20.1",
     "eslint-plugin-write-good-comments": "0.2.0",
+    "eslint": "8.56.0",
     "h3": "1.10.1",
     "husky": "^8.0.3",
-    "nuxt": "^3.10.0",
     "nuxt-gtag": "1.1.2",
-    "ohmyfetch": "0.4.21",
+    "nuxt": "^3.10.0",
     "prettier": "3.2.2",
     "style-dictionary": "3.9.1",
     "typescript": "5.3.3",
     "unocss": "0.58.4",
-    "vue": "3.4.10",
     "vue-eslint-parser": "9.4.0",
     "vue-router": "4.2.5",
-    "vue-tsc": "1.8.27"
-  },
-  "dependencies": {
-    "@faker-js/faker": "8.4.0",
-    "@nuxt/content": "2.12.0",
-    "@nuxtjs/sitemap": "5.0.4",
-    "@unocss/reset": "0.58.4",
-    "chroma-js": "2.4.2"
+    "vue-tsc": "1.8.27",
+    "vue": "3.4.10"
   },
   "license": "MIT",
   "config": {
