--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "blog",
-  "private": true,
-  "version": "0.1.2",
+  "name": "frontend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "changeset": "changeset",
-    "prepare": "husky install",
-    "postinstall": "nuxt prepare",
+    "prepare": "husky",
     "commit": "cz",
-    "typecheck": "nuxi typecheck",
-    "ci:publish": "pnpm build && changeset publish",
-    "ci:version": "changeset version"
+    "lint": "eslint"
   },
   "devDependencies": {
     "@commitlint/cli": "18.4.4",
@@ -22,30 +15,19 @@
     "@commitlint/cz-commitlint": "18.4.4",
     "@eslint/eslintrc": "3.0.0",
     "@eslint/js": "8.56.0",
-    "@iconify-json/material-symbols": "1.1.72",
-    "@iconify-json/mdi": "1.1.64",
-    "@nuxt/eslint-config": "0.2.0",
-    "@nuxtjs/i18n": "8.0.0",
-    "@nuxtjs/mdc": "0.5.0",
-    "@nuxtjs/sitemap": "5.0.4",
-    "@types/chroma-js": "2.4.3",
     "@types/eslint__eslintrc": "2.1.1",
     "@typescript-eslint/eslint-plugin": "6.18.1",
     "@typescript-eslint/parser": "6.18.1",
-    "@unocss/nuxt": "0.58.4",
-    "@unocss/preset-icons": "0.58.5",
-    "@unocss/reset": "0.58.4",
-    "@unocss/transformer-directives": "0.58.4",
-    "autoprefixer": "10.4.17",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-define-config": "2.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-array-func": "4.0.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-no-secrets": "0.8.9",
     "eslint-plugin-only-warn": "1.1.0",
     "eslint-plugin-perfectionist": "2.5.0",
@@ -57,24 +39,19 @@
     "eslint-plugin-unicorn": "50.0.1",
     "eslint-plugin-vue": "9.20.1",
     "eslint-plugin-write-good-comments": "0.2.0",
-    "eslint": "8.56.0",
-    "h3": "1.10.1",
-    "husky": "^8.0.3",
-    "nuxt-gtag": "1.1.2",
-    "nuxt": "^3.10.0",
+    "husky": "9.0.10",
     "prettier": "3.2.2",
-    "style-dictionary": "3.9.1",
-    "typescript": "5.3.3",
-    "unocss": "0.58.4",
-    "vue-eslint-parser": "9.4.0",
-    "vue-router": "4.2.5",
-    "vue-tsc": "1.8.27",
-    "vue": "3.4.10"
+    "typescript": "5.3.3"
   },
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@types/node": "^20.11.17"
   }
 }
